sumo/tests/dfrouter/errors/detector_files/broken_detectors_file_warn/errors.dfrouter
Warning: Unknown lane 'xxx_0' for detector 'MQ11Fs1' in 'input_messstrecke.det.xml'.
